# SingleLinkedList

./: .editorconfig  CMakeLists.txt  README.md  SingleLinkedList.cpp
inc/: SingleLinkedList.h  tests.h
src/: main.cpp  tests.cpp
